# binoc-plugin-hdf5

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: diff_files.rs  diff_python.py
fixtures/: example-femm-3d-modified.h5  satellite-beams-v1.h5  satellite-beams-v2.h5
python/binoc_plugin_hdf5/: __init__.py
src/: hdf5_compare.rs  lib.rs  rename_detector.rs
