[package]
name = "binoc-plugin-hdf5"
version = "0.1.0"
edition = "2021"
description = "HDF5 comparator plugin for binoc"
license = "MIT"

[lib]
name = "binoc_plugin_hdf5"

[features]
default = []
static = ["hdf5/static"]

[dependencies]
binoc-core = { git = "https://github.com/harvard-lil/binoc.git" }
hdf5 = { package = "hdf5-metno", version = "0.12" }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
