[package]
name = "binoc-plugin-hdf5"
version = "0.1.0"
edition = "2021"
description = "HDF5 comparator plugin for binoc"
license = "MIT"

[lib]
name = "binoc_plugin_hdf5"
crate-type = ["cdylib", "rlib"]

[features]
default = []
static = ["hdf5/static"]
python = ["pyo3"]

[dependencies]
binoc-core = { git = "https://github.com/parkan/binoc.git", branch = "native-plugin-registration" }
hdf5 = { package = "hdf5-metno", version = "0.12" }
serde_json = "1.0"
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3"
